--- a/Kursova/Kursova/Kursova/Views/MainPage.xaml
+++ b/Kursova/Kursova/Kursova/Views/MainPage.xaml
@@ -1,8 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Kursova.Views.MainPage"
-             Title="{Binding Title}">
+<MasterDetailPage 
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:views="clr-namespace:Kursova.Views"
+    x:Class="Kursova.Views.MainPage"
+    NavigationPage.HasNavigationBar="False">
+
+    <MasterDetailPage.Master>
+        <views:SlideMenuPage Title="Menu"/>
+    </MasterDetailPage.Master>
+
+    <MasterDetailPage.Detail>
+        <ContentPage>
 
 
-</ContentPage>
+        </ContentPage>
+    </MasterDetailPage.Detail>
+</MasterDetailPage>
