--- a/Kursova/Kursova/Kursova/Views/ActivitiesPage.xaml
+++ b/Kursova/Kursova/Kursova/Views/ActivitiesPage.xaml
@@ -61,29 +61,29 @@
                                 </Grid.RowDefinitions>
 
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
 
-                                <Label 
+                                <!--<Label 
                                     Grid.Row="0"
                                     Grid.Column="0"
                                     FontSize="25"
                                     Margin="0,0,10,0"
-                                    Text="{Binding Id, StringFormat='{0:F0}'}"/>
+                                    Text="{Binding Id, StringFormat='{0:F0}'}"/>-->
 
                                 <Label
                                     Grid.Row="0"
-                                    Grid.Column="1"
+                                    Grid.Column="0"
                                     FontSize="25"
+                                    Margin="25,0"
                                     Text="{Binding Name}"
                                     FontFamily="{StaticResource OverpassSemiBold}"
                                     TextColor="{StaticResource DarkGreen}"/>
 
                                 <CheckBox
                                     Grid.Row="0"
-                                    Grid.Column="2"
+                                    Grid.Column="1"
                                     HorizontalOptions="End"
                                     IsChecked="{Binding IsChecked}"/>
 
